--- a/index.css
+++ b/index.css
@@ -1,3 +1,51 @@
-#heading{
-    color:red;
+.header{
+   display:flex;
+   justify-content:space-between;
+   border:1px solid black;
+   background-color: red;
+   color: white;
+}
+.logo{
+    width:150px;
+    padding: 20px;
+}
+.nav-items>ul{
+display:flex;
+list-style-type: none;
+padding:20px;
+font-size:larger;
+}
+.nav-items>ul>li{
+    padding: 10px;
+    margin:10px;  
+}
+.search{
+    padding:30px;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    margin: 5px;
+}
+.restaurant-card{
+    width: 200px;
+    height:450px;
+    padding: 5px;
+    margin:8px;
+box-shadow: 1px 1px 1px 1px;
+background-color: whitesmoke;
+}
+.restaurant-card:hover{
+    background-color: azure;
+    border:1px solid black;
+    cursor: pointer;
+}
+
+.restaurant-image{
+width:100%;
+height: 60%;
+}
+.restaurant-name{
+    text-align: center;
 }
