--- a/index.css
+++ b/index.css
@@ -49,3 +49,12 @@ height: 60%;
 .restaurant-name{
     text-align: center;
 }
+.filter-btn{
+    padding: 5px;
+    margin: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    color:red;
+    background-color: gainsboro;
+    border: none;
+}
