--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 .header{
    display:flex;
    justify-content:space-between;
-   border:1px solid black;
+   border:1px solid #000000;
    background-color: red;
    color: white;
 }
 .logo{
     width:150px;
-    padding: 20px;
+    padding: 10px;
 }
 .nav-items>ul{
 display:flex;
@@ -27,9 +27,11 @@ font-size:larger;
     flex-wrap: wrap;
     padding: 5px;
     margin: 5px;
+    align-items: center;
+    justify-content: center;
 }
 .restaurant-card{
-    width: 200px;
+    width: 250px;
     height:450px;
     padding: 5px;
     margin:8px;
@@ -57,4 +59,30 @@ height: 60%;
     color:red;
     background-color: gainsboro;
     border: none;
+}
+.login-btn{
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    color:red;
+    background-color: gainsboro;
+    border: none;
+    border-radius: 4px 4px;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.shimmer-cards{
+    height:450px;
+    width: 250px;
+margin:8px;
+ padding:5px;
+ box-shadow: 1px 1px 1px 1px;
+ background-color: whitesmoke;
+ border-radius: 5px 5px;
 }
