--- a/index.css
+++ b/index.css
@@ -6,13 +6,13 @@
    color: white;
 }
 .logo{
-    width:150px;
-    padding: 10px;
+    width:70px;
+    padding: 25px;
 }
 .nav-items>ul{
 display:flex;
 list-style-type: none;
-padding:20px;
+padding:10px;
 font-size:larger;
 }
 .nav-items>ul>li{
@@ -51,14 +51,34 @@ height: 60%;
 .restaurant-name{
     text-align: center;
 }
-.filter-btn{
+.filter {
+    display:flex;
+    justify-content:space-between;
+    background-color: antiquewhite; padding: 20px; 
+}
+.search{
+    padding: 10px;
+  
+
+}
+.search-btn{
     padding: 5px;
     margin: 10px;
     cursor: pointer;
     font-weight: bold;
     color:red;
     background-color: gainsboro;
+    border: none; 
+}
+.filter-btn {
+    padding: 12px;
+    margin: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    color:white;
+    background-color: red;
     border: none;
+    border-radius: 4px 4px;
 }
 .login-btn{
     padding: 10px;
